--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -1,6 +1,7 @@
+// LES PADS ARGUMENTS
+
 .wrapper-pads{
 	display: flex;
-	justify-content: space-between;
 	flex-wrap:wrap;
 }
 
@@ -9,10 +10,23 @@
 	text-align: center;
 	margin-bottom: $espace;
 	margin-right: $espace;
-	padding: $padding*.9 $padding*1.2 $padding;
+	padding: $padding $padding*1.3 $padding;
 	width: calc(25% - #{$espace}*3/4);
 
-	&:last-child{
+	@include width-below(1100px){
+		width: calc(50% - #{$espace}/2);
+
+		&:nth-child(2n){
+			margin-right: 0;
+		}
+	}
+
+	@include width-below(500px){
+		width: 100%;
+		margin-right: 0;
+	}
+
+	&:nth-child(4n){
 		margin-right: 0;
 	}
 
@@ -27,12 +41,163 @@
 		font-size: 2.5rem;
 		text-transform: uppercase;
 		font-weight: 800;
-		margin-bottom: .2em;
+		margin-bottom: .35em;
 	}
 
 	p{
 		text-transform: uppercase;
 		font-weight: 500;
 	}
-
 }
+
+// LE PORTFOLIO
+
+.wrapper-folio{
+	display: flex;
+	flex-wrap:wrap;
+}
+
+.pad-folio{
+	display: block;
+	background-color: $rouge;
+	text-align: center;
+	margin-bottom: $espace;
+	margin-right: $espace;
+	padding: $padding*.9 $padding*1.2 $padding;
+	text-decoration: none;
+	position: relative;
+
+	//Au dessus de 1399px, portfolio sur 4 colonnes
+	@include width-above(1399px){
+		width: calc(25% - #{$espace}*3/4);
+
+		&:nth-child(4n){
+			margin-right: 0;
+		}
+	}
+
+	//Sous 1400px, portofolio sur 3 colonnes 
+	@include width-below(1400px){
+		width: calc(100%/3 - #{$espace}*2/3);
+
+		&:nth-child(3n){
+			margin-right: 0;
+		}
+	}
+
+	//Sous 1150px, portofolio sur 2 colonnes 
+	@include width-below(1150px){
+		width: calc(100%/2 - #{$espace}/2);
+
+		&:nth-child(2n){
+			margin-right: 0;
+		}
+	}
+
+	//Sous 700px, portofolio sur 1 colonne 
+	@include width-below(700px){
+		width: 100%;
+		margin-right: 0;
+	}
+
+	// Pour que le hover ait une transition
+	&::after{
+		transition: background-color ease-in-out .2s;
+		content:'';
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		background-color: rgba(#000, 0);
+		z-index: 1;
+	}	
+
+	.wrapper-img{
+		margin-bottom: 100px;
+	}
+
+	.img-desktop{
+
+		//Screen
+		transition: background-position ease-in-out 4s;
+		width: 100%;
+		height: 190px;
+		border: 10px solid #383838;
+		margin: 0 auto;
+		border-radius: 7px 7px 0 0;
+		background-size: 100%;
+		background-position: top;
+		position: relative;
+
+
+		//Bas gris
+		&::after{
+			content:'';
+			position: absolute;
+			width: calc(100% + 20px);
+			height: 35px;
+			background-color: #e0e0e0;
+			bottom: -45px;
+			left: -10px;
+			border-radius: 0 0 7px 7px;
+
+		}
+		
+		// Socle
+		&::before{
+			content: '';
+			display: block;
+			width: 128px;
+			height: 52px;
+			background: url('img/svg-prod/bas-mac.svg');
+			background-size: cover;
+			position: absolute;
+			bottom: -70px; //hauteur du socle + hauteur du bas + bordure écran
+			left: calc(50% - 64px);
+			
+		}
+
+		img{
+			display: none;
+		}
+
+
+	}
+
+	h2{
+		font-size: 2.5rem;
+		text-transform: uppercase;
+		font-weight: 800;
+		margin-bottom: .35em;
+		color: #fff;
+	}
+
+	p{
+		text-transform: uppercase;
+		font-weight: 500;
+		color: #fff;
+	}
+}
+
+.pad-folio:hover{
+
+	z-index: 0;
+
+	&::after{
+		background-color: rgba(#000, .3);
+	}
+
+	.wrapper-img,
+	h2,
+	p{
+		position: relative;
+		z-index: 10;
+	}
+
+	.img-desktop{
+		transition: background-position ease-in-out 7s;
+		background-position: bottom;
+	}
+}
+
