--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -101,6 +101,15 @@ header{
 	font-weight: 500;
 }
 
+.text-content{
+	p{
+		line-height: 1.5em;
+
+		strong{
+			font-weight: bold;
+		}
+	}
+}
 
 
 
