--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -117,54 +117,6 @@
 		margin-bottom: 100px;
 	}
 
-	.img-desktop{
-
-		//Screen
-		transition: background-position ease-in-out 4s;
-		width: 100%;
-		height: 190px;
-		border: 10px solid #383838;
-		margin: 0 auto;
-		border-radius: 7px 7px 0 0;
-		background-size: 100%;
-		background-position: top;
-		position: relative;
-
-
-		//Bas gris
-		&::after{
-			content:'';
-			position: absolute;
-			width: calc(100% + 20px);
-			height: 35px;
-			background-color: #e0e0e0;
-			bottom: -45px;
-			left: -10px;
-			border-radius: 0 0 7px 7px;
-
-		}
-		
-		// Socle
-		&::before{
-			content: '';
-			display: block;
-			width: 128px;
-			height: 52px;
-			background: url('img/svg-prod/bas-mac.svg');
-			background-size: cover;
-			position: absolute;
-			bottom: -70px; //hauteur du socle + hauteur du bas + bordure écran
-			left: calc(50% - 64px);
-			
-		}
-
-		img{
-			display: none;
-		}
-
-
-	}
-
 	h2{
 		font-size: 2.5rem;
 		text-transform: uppercase;
@@ -179,6 +131,58 @@
 		color: #fff;
 	}
 }
+
+// Image desktop
+
+.img-desktop{
+
+	//Screen
+	transition: background-position ease-in-out 4s;
+	width: 100%;
+	height: 220px;
+	border: 10px solid #383838;
+	margin: 0 auto;
+	border-radius: 7px 7px 0 0;
+	background-size: 100%;
+	background-position: top;
+	position: relative;
+
+
+	//Bas gris
+	&::after{
+		content:'';
+		position: absolute;
+		width: calc(100% + 20px);
+		height: 35px;
+		background-color: #e0e0e0;
+		bottom: -45px;
+		left: -10px;
+		border-radius: 0 0 7px 7px;
+
+	}
+	
+	// Socle
+	&::before{
+		content: '';
+		display: block;
+		width: 128px;
+		height: 52px;
+		background: url('img/svg-prod/bas-mac.svg');
+		background-size: cover;
+		position: absolute;
+		bottom: -70px; //hauteur du socle + hauteur du bas + bordure écran
+		left: calc(50% - 64px);
+		
+	}
+
+	img{
+		display: none;
+	}
+
+
+}
+
+//
 
 .pad-folio:hover{
 
