--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -114,7 +114,7 @@
 	}	
 
 	.wrapper-img{
-		margin-bottom: 100px;
+		margin-bottom: 110px;
 		position: relative;
 	}
 
@@ -197,12 +197,40 @@
 	border-bottom: 20px solid #eee;
 	border-right: 5px solid #eee;
 	border-left: 5px solid #eee;
-	right: 10%;
-	bottom: -75px;
+	right: 7%;
+	bottom: -70px;
 
 	position: absolute;
 
 	box-shadow: -10px -10px 30px 0px rgba(#000, .3);
+
+	img{
+		display: none;
+	}
+}
+
+//image smartphone
+
+.img-smartphone{
+
+	//Screen
+	transition: background-position ease-in-out 4s;
+	width: 15%;
+	height: 90px;
+	margin: 0 auto;
+	background-size: 100%;
+	background-position: top;
+	border-radius: 5px;
+	border-top: 10px solid #eee;
+	border-bottom: 15px solid #eee;
+	border-right: 3px solid #eee;
+	border-left: 3px solid #eee;
+	right: 35%;
+	bottom: -80px;
+
+	position: absolute;
+
+	box-shadow: -6px -6px 20px 0px rgba(#000, .4);
 
 	img{
 		display: none;
@@ -232,6 +260,11 @@
 	}
 
 	.img-tablette{
+		transition: background-position ease-in-out 4s;
+		background-position: bottom;
+	}
+
+	.img-smartphone{
 		transition: background-position ease-in-out 4s;
 		background-position: bottom;
 	}
