Folio desktop proportionnel

--- a/sass/_singlefolio.scss
+++ b/sass/_singlefolio.scss
@@ -6,7 +6,7 @@
 	background-color: $rouge;
 	width: calc(50% - #{$espace}/2);
 	margin-right: $espace;
-	padding: $padding*2;
+	padding: $padding;
 
 	.wrapper-img{
 		max-width: 75%;
