--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -165,9 +165,9 @@
 		content:'';
 		position: absolute;
 		width: calc(100% + 20px);
-		height: 35px;
+		height: 20%;
 		background-color: #e0e0e0;
-		bottom: -45px;
+		bottom: calc(-20% - 10px);
 		left: -10px;
 		border-radius: 0 0 7px 7px;
 
@@ -177,13 +177,13 @@
 	&::before{
 		content: '';
 		display: block;
-		width: 128px;
-		height: 52px;
+		width: 50%;
+		height: 35%; //pif total;
 		background: url('img/svg-prod/bas-mac.svg');
 		background-size: cover;
 		position: absolute;
-		bottom: -70px; //hauteur du socle + hauteur du bas + bordure écran
-		left: calc(50% - 64px);
+		bottom: calc(-34% - 20px); //pif
+		left: calc(50% - 45% / 2);
 		
 	}
 }
