--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -114,7 +114,7 @@
 	}	
 
 	.wrapper-img{
-		margin-bottom: 110px;
+		margin-bottom: 120px;
 		position: relative;
 	}
 
@@ -199,7 +199,7 @@
 	border-color: #eee;
 	border-width: 12px 4px 15px;
 	right: 7%;
-	bottom: -38%;
+	top: 63%;
 	position: absolute;
 	box-shadow: -10px -10px 30px 0px rgba(#000, .3);
 }
@@ -215,7 +215,7 @@
 	border-color: #eee;
 	border-width: 8px 3px 12px 3px;
 	right: 35%;
-	bottom: -80px;
+	top: 93%;
 	position: absolute;
 	box-shadow: -6px -6px 20px 0px rgba(#000, .4);
 }
