--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -19,6 +19,10 @@ img{
 	height: auto;
 }
 
+.svg-wrapper{
+	display: none;
+}
+
 //HEADER
 
 header{
@@ -59,7 +63,7 @@ header{
 .nav{
 
 	font-size: 1.8rem;
-	font-weight: 300;
+	font-weight: 500;
 	text-transform: uppercase;
 
 	li{
@@ -85,9 +89,10 @@ header{
 			color: transparent;
 		}
 
-		&:hover{
+		&:hover,
+		&:focus{
 
-			color: darken($rouge, 35%);
+			color: rgba(#000, .8);
 
 			&::before{
 				text-shadow: 10px 0px #fff, -10px 0px #fff;
@@ -95,6 +100,22 @@ header{
 			}
 		}
 	}
+
+	.current-menu-item a{
+		color: rgba(#000, .8);
+
+		&::before{
+			content: ".";
+			position: absolute;
+			left: 50%;
+			top: 60%;
+			transform: translateX(-50%);
+			font-size: 1.4em;
+			text-shadow: 10px 0px #fff, -10px 0px #fff;
+			color: #fff;
+		}
+	}
+
 }
 
 header{
