--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -17,6 +17,8 @@ $padding: 45px;
 
 @mixin anim-points{
 
+	position: relative;
+
 	&::before{
 		transition: all ease-in-out .25s;
 		content: ".";
@@ -35,6 +37,6 @@ $padding: 45px;
 			text-shadow: 10px 0px #fff, -10px 0px #fff;
 			color: #fff;
 		}
-		
+
 	}
 }
