--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -142,6 +142,37 @@ header{
 		@extend %bt;
 		font-size: 2.8rem;
 		margin-top: 1em;
+		position: relative;
+
+		em{
+			display: inline-block;
+			transition: all ease .25s;
+		}
+
+		&::before{
+			transition: all ease .25s;
+			content:'';
+			display: block;
+			position: absolute;
+			width: 10px;
+			background-color: rgba(#fff, 0);
+			right: 0;
+			top:0;
+			bottom: 0;
+			z-index: -1;
+		}
+
+		&:hover{
+
+			&::before{
+				width: 100%;
+				background-color: rgba(#fff, .25);
+			}
+
+			em{
+				transform: rotate(90deg);
+			}
+		}
 	}
 }
 
