--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,6 +6,8 @@ $noir: #2b2b2b;
 $espace: 5px;
 $padding: 45px;
 
+//Mixins
+
 %bt{
 	display: inline-block;
 	color: #fff;
@@ -38,5 +40,17 @@ $padding: 45px;
 			color: #fff;
 		}
 
+	}
+}
+
+//Animations
+
+@keyframes background{
+	from{
+		transform: scale(1);
+	}
+
+	to{
+		transform: scale(1.6);
 	}
 }
