--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -119,10 +119,7 @@
 	}
 
 	h2{
-		font-size: 2.5rem;
-		text-transform: uppercase;
-		font-weight: 800;
-		margin-bottom: .35em;
+		@extend %h2;
 		color: #fff;
 	}
 
