--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -8,8 +8,8 @@
 	margin-right: $espace;
 	padding: $padding;
 	background-color: $gris;
-	background-image: url('img/fond-txt.png');
-	background-size: cover;
+	//background-image: url('img/fond-txt.png');
+	//background-size: cover;
 
 	@include width-below(1400px){
 		width: 100%;
