--- a/sass/_singlefolio.scss
+++ b/sass/_singlefolio.scss
@@ -1,7 +1,80 @@
+.single-portfolio .big-header{
+	position: relative;
+}
+
 .wrapper-big{
 	display: flex;
 	flex-wrap: wrap;
 }
+
+//Bt suivant / précédent
+
+.link-other{
+	color: rgba(#fff, .4);
+
+	a{
+		transition: color ease .25s;
+		color: inherit;
+		text-decoration: none;
+		position: absolute;
+		bottom: 0;
+
+		div{
+			display: inline-block;
+			vertical-align: middle;
+		}
+
+		&:hover{
+			color: rgba(#fff, .9);
+		}
+	}
+}
+
+.previous-link{
+	text-align: left;
+	left: 0;
+
+	&::before{
+		transition: margin-right ease .25s;
+		content:'';
+		width: 19px;
+		height: 34px;
+		background: url('./img/svg-prod/big-arrow.svg') left center no-repeat;
+		transform: rotate(180deg);
+		display: inline-block;
+		vertical-align: middle;
+		margin-right: 20px;
+	}
+
+	&:hover::before{
+		margin-right: 30px;
+	}
+	
+}
+
+.next-link{
+	text-align: right;
+	right: 0;
+	
+	&::after{
+		transition: margin-left ease .25s;
+		content:'';
+		width: 19px;
+		height: 34px;
+		background: url('./img/svg-prod/big-arrow.svg') right center no-repeat;
+		display: inline-block;
+		vertical-align: middle;
+		margin-left: 20px;
+	}
+
+	&:hover::after{
+		margin-left: 30px;
+	}
+	
+}
+
+
+// Slider
 
 .slider{
 	background-color: $rouge;
