--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -228,7 +228,7 @@ header{
 			position: absolute;
 			width: 10px;
 			background-color: rgba(#fff, 0);
-			right: 0;
+			left: 0;
 			top:0;
 			bottom: 0;
 			z-index: -1;
