--- a/sass/_singlefolio.scss
+++ b/sass/_singlefolio.scss
@@ -23,6 +23,10 @@
 		div{
 			display: inline-block;
 			vertical-align: middle;
+
+			@include width-below(600px){
+				display: none;
+			}
 		}
 
 		span{
@@ -36,7 +40,7 @@
 	}
 }
 
-.previous-link{
+a.previous-link{
 	text-align: left;
 	left: 0;
 
