--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -153,7 +153,7 @@ header{
 			&:hover::before{
 				width: 24%;
 				opacity: 1;
-				background-color: rgba(#000, .8);
+				background-color: rgba(#fff, .6);
 			}
 
 		}
@@ -171,19 +171,19 @@ header{
 		&:hover,
 		&:focus{
 
-			color: rgba(#000, .8);
+			color: rgba(#fff, .6);
 
 			svg{
-				fill: rgba(#000, .8);
+				fill: rgba(#fff, .6);
 			}
 		}
 	}
 
 	.current-menu-item a{
-		color: rgba(#000, .8);
+		color: rgba(#fff, .6);
 
 		svg{
-			fill: rgba(#000, .8);
+			fill: rgba(#fff, .6);
 		}
 	}
 }
