--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -57,50 +57,25 @@
 		}
 	}
 
-	.submit{
-		display: inline-block;
-		margin-top: 20px;
-		border: 2px solid $rouge;
-		position: relative;
-
-		svg{
-			transition: fill ease .25s;
-			width: 30px;
-			fill: $rouge;
-			position: absolute;
-			right: 20px;
-			top: 13px;
-		}
-
-		img{
-			display: none;
-		}
-
-		&:hover{
-			svg{
-				fill: #fff;
-			}
-
-			input{
-				background-color: $rouge;
-				color: #fff;
-			}
-		}
-	}
-
 	input[type="submit"]{
 		transition: all ease .25s;
 		display: inline-block;
 		appearance: none;
 		background: none;
-		border: none;
+		border: 2px solid $rouge;
 		color: $rouge;
 		font-size: 3rem;
 		padding: 15px 25px 10px;
 		text-transform: uppercase;
 		font-family: Lato, Hevetica, Arial, sans-serif;
 		font-weight: bold;
-		padding-right: 65px;	
+		margin-top: 20px;
+
+		&:hover{
+			cursor: pointer;
+			background-color: $rouge;
+			color: #fff;
+		}
 	}
 
 	.wpcf7-response-output{
