Fix #9 et fix #20

--- a/sass/_singlefolio.scss
+++ b/sass/_singlefolio.scss
@@ -101,7 +101,7 @@ a.previous-link{
 	&:hover{
 		.img-peripherique{
 			transition: background-position ease-in-out 5s;
-			background-position: bottom;
+			//background-position: bottom;
 		}
 	}
 }
