--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -158,7 +158,11 @@
 	border: 10px solid #383838;	
 	border-radius: 7px 7px 0 0;	
 	position: relative;
-	
+
+	.wrapper-peripherique{
+		height: 200px;
+		overflow: hidden;
+	}	
 
 
 	//Bas gris
@@ -171,6 +175,7 @@
 		bottom: calc(-20% - 10px);
 		left: -10px;
 		border-radius: 0 0 7px 7px;
+		overflow: visible;
 //
 	}
 	
@@ -203,6 +208,11 @@
 	top: 63%;
 	position: absolute;
 	box-shadow: -10px -10px 30px 0px rgba(#000, .3);
+
+	.wrapper-peripherique{
+		height: 143px;
+		overflow: hidden;
+	}
 }
 
 //image smartphone
@@ -219,6 +229,11 @@
 	top: 93%;
 	position: absolute;
 	box-shadow: -6px -6px 20px 0px rgba(#000, .4);
+
+	.wrapper-peripherique{
+		height: 90px;
+		overflow: hidden;
+	}
 }
 
 //
