--- a/sass/_signature.scss
+++ b/sass/_signature.scss
@@ -1,12 +1,12 @@
 /*!
-Theme Name: Blank Theme
+Theme Name: Themeloc
 Theme URI:
 Author: Loïc Herr
-Author URI: 
+Author URI: http://herrloc.fr
 Description:
-Version: 1.0.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Version: 1.1.0
+License:
+License URI:
 Tags: 
 Text Domain: 
 */
