--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,21 +1,26 @@
-$rouge: #d55252;
-$rougevif: #d54040;
+$rouge: #e74a4a;
 $gris: #ffffff;
 $grisfonce: #efefef;
 $noir: #2b2b2b;
 
-$espace: 5px;
+$espace: 8px;
 $padding: 45px;
 
 //Mixins
 
 %bt{
+	transition: border ease .25s;
 	display: inline-block;
 	color: #fff;
 	text-transform: uppercase;
 	text-decoration: none;
 	padding: 1em 1.5em .9em;
 	border: 2px solid #fff;
+	font-weight: 800;
+	
+	&:hover{
+		border: 2px solid rgba(#fff, .5);
+	}
 }
 
 @mixin anim-points{
@@ -56,10 +61,10 @@ $padding: 45px;
 
 @keyframes background{
 	from{
-		transform: scale(1.5);
+		//transform: scale(1.2);
 	}
 
 	to{
-		transform: scale(1);
+		//transform: scale(1);
 	}
 }
