--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -35,9 +35,13 @@ header{
 		padding: $padding*0.5;
 	}
 	
-	min-height: calc(100vh - 2 * #{$espace});
+	min-height: calc(75vh);
 	display: flex;
 	flex-direction: column;
+}
+
+.accueil header{
+	min-height: calc(100vh - 2 * #{$espace});
 }
 
 .img-background{
@@ -299,6 +303,43 @@ header{
 	}
 }
 
+.ico-scroll{	
+	.icons-scroll::after{
+		position: absolute;
+		left: calc(50% - 6px);
+		content:'';
+		display: block;
+		height: 10px;
+		width: 10px;
+		border-right: 2px solid #fff;
+		border-bottom: 2px solid #fff;
+		transform: rotate(45deg);
+		background-color: transparent;
+		animation: scroll 1.7s ease-in-out infinite;
+	}
+	
+	@keyframes scroll{
+		0%{
+			bottom: 35px;
+		}
+		50%{
+			bottom: 25px;
+		}
+		100%{
+			bottom: 35px;
+		}
+	}
+	
+	svg{
+		position: 	absolute;
+		bottom: 50px;
+		left: calc(50% - 25px);
+		height: 50px;
+		width: 50px;
+		fill: #fff;
+	}
+}
+
 .text-content{
 
 	h2{
@@ -324,7 +365,7 @@ header{
 			color: $rouge;
 		}
 
-		&:not([href*="plisme.fr"])::after{
+		&:not([href*="herrloc.fr"])::after{
 			content:' [...]';
 		}
 	}
