--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -50,9 +50,7 @@ header{
 	top:0;
 	right: 0;
 	bottom: 0;
-	left:0;
-	background-image: linear-gradient(to left, #e74677, $rouge);;
-	
+	left:0;	
 
 	&:after{
 		content:'';
@@ -69,6 +67,10 @@ header{
 		opacity: .2;
 		z-index: -1;
 	}
+}
+
+body:not(.single-portfolio) .img-background{
+	background-image: linear-gradient(to left, adjust-hue($rouge, -18deg), $rouge);
 }
 
 .wrapper-top{
@@ -314,8 +316,20 @@ header{
 		border-right: 2px solid #fff;
 		border-bottom: 2px solid #fff;
 		transform: rotate(45deg);
-		background-color: transparent;
 		animation: scroll 1.7s ease-in-out infinite;
+	}
+	
+	.icons-scroll::before{
+		position: absolute;
+		left: calc(50% - 6px);
+		content:'';
+		display: block;
+		height: 10px;
+		width: 10px;
+		border-right: 2px solid #fff;
+		border-bottom: 2px solid #fff;
+		transform: rotate(45deg);
+		animation: scroll2 1.7s ease-in-out infinite;
 	}
 	
 	@keyframes scroll{
@@ -327,6 +341,18 @@ header{
 		}
 		100%{
 			bottom: 35px;
+		}
+	}
+	
+	@keyframes scroll2{
+		0%{
+			bottom: 42px;
+		}
+		50%{
+			bottom: 35px;
+		}
+		100%{
+			bottom: 42px;
 		}
 	}
 	
