--- a/sass/_singlefolio.scss
+++ b/sass/_singlefolio.scss
@@ -1,7 +1,3 @@
-.single-portfolio .big-header{
-	position: relative;
-}
-
 .wrapper-big{
 	display: flex;
 	flex-wrap: wrap;
@@ -17,7 +13,7 @@
 		color: inherit;
 		text-decoration: none;
 		position: absolute;
-		bottom: 0;
+		bottom: $padding;
 		text-transform: none;
 
 		div{
@@ -31,7 +27,8 @@
 
 		span{
 			font-weight: 900;
-			text-transform: uppercase;
+			display: block;
+			margin-top: 5px;
 		}
 
 		&:hover{
@@ -42,7 +39,7 @@
 
 a.previous-link{
 	text-align: left;
-	left: 0;
+	left: $padding;
 
 	&::before{
 		transition: margin-right ease .25s;
@@ -64,7 +61,7 @@ a.previous-link{
 
 .next-link{
 	text-align: right;
-	right: 0;
+	right: $padding;
 	
 	&::after{
 		transition: margin-left ease .25s;
