--- a/sass/_singlefolio.scss
+++ b/sass/_singlefolio.scss
@@ -37,24 +37,40 @@
 	}
 }
 
+.previous-link,
+.next-link{
+	
+	display: flex;
+	align-items: center;
+	
+	&::before{
+		transition: all ease .25s;
+		content:'';
+		display: inline-block;
+		height: 20px;
+		width: 20px;
+		border-right: 2px solid rgba(#fff, .4);
+		border-bottom: 2px solid rgba(#fff, .4);
+	}
+	
+	&:hover::before{
+		border-bottom: 2px solid rgba(#fff, .9);
+		border-right: 2px solid rgba(#fff, .9);
+	}
+}
+
 a.previous-link{
 	text-align: left;
 	left: $padding;
 
 	&::before{
-		transition: margin-right ease .25s;
-		content:'';
-		width: 19px;
-		height: 34px;
-		background: url('./img/svg-prod/big-arrow.svg') left center no-repeat;
-		transform: rotate(180deg);
-		display: inline-block;
+		transform: rotate(135deg);
 		vertical-align: middle;
-		margin-right: 20px;
+		margin-right: 10px;
 	}
 
 	&:hover::before{
-		margin-right: 30px;
+		margin-right: 20px;
 	}
 	
 }
@@ -63,19 +79,15 @@ a.previous-link{
 	text-align: right;
 	right: $padding;
 	
-	&::after{
-		transition: margin-left ease .25s;
-		content:'';
-		width: 19px;
-		height: 34px;
-		background: url('./img/svg-prod/big-arrow.svg') right center no-repeat;
-		display: inline-block;
+	&::before{
+		transform: rotate(-45deg);
 		vertical-align: middle;
-		margin-left: 20px;
+		margin-left: 10px;
+		order: 2;
 	}
 
-	&:hover::after{
-		margin-left: 30px;
+	&:hover::before{
+		margin-left: 20px;
 	}
 	
 }
@@ -84,202 +96,14 @@ a.previous-link{
 // Slider
 
 .slider{
-	background-color: $rouge;
-	width: calc(50% - #{$espace}/2);
-	margin-right: $espace;
+	max-width: 1050px;
+	margin: 0 auto;
 	padding: $padding*1.5 $padding*2;
-
-	.wrapper-img{
-		max-width: 85%;
-		position: relative;
-		margin: 0 auto;
-
-		@include width-below(500px){
-			max-width: 100%;
-		}
-	}
+	position: relative;
 
 	.img-peripherique{
 		transition: background-position ease-in-out 5s;
 	}
-}
-
-.wrapper-content{
-
-	display: flex;
-	flex-wrap:wrap;
-	width: calc(50% - #{$espace}/2);
-
-	> div{
-		text-align: center;
-	}
-
-	.pad1{
-		width: 100%;
-		margin-right: 0;
-		margin-bottom: $espace;
-	}
-
-	.wrapper-mini{
-		width: calc(50% - #{$espace}/2);
-		margin-right: $espace;
-	}
-
-	.pad2{
-		width: calc(50% - #{$espace}/2);
-	}
-
-	h2{
-		font-weight: 900;
-		font-size: 2.5rem;
-		text-transform: uppercase;
-		margin-bottom: .5em;
-
-		span{
-			display: block;
-			margin-bottom: .5em;
-		}
-
-		span svg{
-			height: 35px;
-			width: auto;
-			fill: $noir;
-		}
-
-		.couleur svg{
-			height: 50px;
-		}
-	}
-
-
-}
-
-.pad1, .pad2{
-	background-color: $gris;
-	padding: $padding;
-	display: flex;
-	align-items: center;
-	justify-content:center;
-
-	> div{
-		width: 100%;
-	}
-}
-
-.wrapper-mini{
-	display: flex;
-	flex-wrap: wrap;
-	background-color: none;
-	font-size: 2rem;
-	text-transform: uppercase;
-	line-height: 1.3em;
-	font-weight: 900;	
-
-	.content-mini{
-		width: calc(50% - #{$espace}/2);
-		background-color: $gris;
-		margin-bottom: $espace;
-		padding: $padding;
-		display: flex;
-		align-items:center;
-		justify-content:center;
-
-		&:nth-child(2n+1){
-			margin-right: $espace;
-		}
-
-		span{
-			display: block;
-			margin-bottom: .4em;
-
-			svg{
-				height: 35px;
-				width: auto;
-				fill: #fff;
-			}
-		}
-	}
-
-	.padAvant{
-		background-color: $rouge;
-		margin-bottom: 0;
-		color: #fff;
-
-		a{
-			color: inherit;
-		}
-	}
-
-	a.padAvant{
-		transition: all ease .25s;
-		text-decoration: none;
-
-		svg{
-			transition: all ease .25s;
-		}
-
-		@include anim-points;
-
-		&::before{
-			top: 65%;
-		}
-
-		&:hover{
-
-			color: rgba(#fff, .7);
-
-			svg{
-				fill: rgba(#fff, .7) !important;
-			}
-			
-			
-		}
-	}
-}
-
-//Couleurs
-
-.single-color{
-	background-color: #fff;
-	padding: 7px;
-	display: inline-block;
-	vertical-align: top;
-	margin-right: 20px;
-	margin-top: 20px;
-	width: 40%;
-
-	&:last-child{
-		margin-right: 0;
-	}
-
-	div{
-		cursor: pointer;
-	}
-}
-
-.couleur-principale{
-	min-height: 100px;
-}
-
-.variantes{
-	display: flex;
-
-	div{
-		flex: 1;
-		min-height: 40px;
-	}
-}
-
-.text-couleur{
-	display: block;
-	font-size: 2rem;
-	text-transform: uppercase;
-	font-weight: 900;
-	margin-top: 15px;
-}
-
-.slider{
-	position: relative;
 }
 
 .slidesjs-pagination{
@@ -296,7 +120,7 @@ a.previous-link{
 
 		a{
 			transition: background-color ease-in-out .4s;
-			background-color: rgba(#000, .7);
+			background-color: rgba(#000, .3);
 			display: block;
 			width: 12px;
 			height: 12px;
@@ -306,7 +130,7 @@ a.previous-link{
 
 
 			&.active{
-				background-color: rgba(#fff, .5);
+				background-color: rgba(#000, .5);
 			}
 		}
 		
@@ -340,109 +164,53 @@ a.previous-link{
 	padding: 1em;
 }
 
-//Responsive grille
+.singleslide{
+	position: relative;
+}
 
-@include width-below(1400px){
+// 
 
-	.slider{
-		width: 100%;
-		margin-right: 0;
-		margin-top: $espace;
-		order: 2;
+.infos{
+	
+	margin-top: 30px;
+	font-weight: 800;
+	font-size: 1.75rem;
+	
+	.lien_site{
+		margin-left: 40px;
 	}
-
-	.wrapper-content{
-		width: 100%;
-		margin-right: 0;
-		order: 1;
-
-		.pad1{
-			margin-right: $espace;
-		}
-
-		> div:nth-child(n){
-			width: calc(100% / 3 - #{$espace} * 2/3);
-			margin-bottom: 0;
-
-			&:last-child{
-				margin-right: 0;
-			}
-		}
-
-		.wrapper-mini{
-			margin-right: $espace;
-
-			.content-mini{
-				width: calc(50% - #{$espace} / 2);
-			}
-
-			.content-mini:nth-child(2n){
-				margin-right: 0;
-			}
-		}
+	
+	.lien_site,
+	.date_site{
+		display: inline-block;
+	}
+	
+	a{
+		color: #fff;
+		text-decoration: none;
+	}
+	
+	.text-link{
+		padding-bottom: 3px;
+		transition: border-bottom ease .2s;
+		border-bottom: 1px solid #fff;
+	}
+	
+	.lien_site:hover .text-link{
+		border-bottom: 3px solid #fff;
+	}
+	
+	svg{
+		fill: #fff;
+		width: 25px;
+		height: 25px;
+		position: relative;
+		top: 7px;
+		margin-right: 5px;
 	}
 }
 
-@include width-below(1050px){
-	.wrapper-content > div:nth-child(n){
-		width: calc(50% - #{$espace} / 2);
-	}
-
-	.pad1.pad1.pad1{
-		width: 100% !important;
-		margin-bottom: $espace;
-		margin-right: 0;
-	}
+.more-bt{
+	background-color: $rouge;
+	@extend %bt;
 }
-
-@include width-below(700px){
-
-	.slider{
-		padding: $padding/2;
-	}
-
-	.wrapper-content > div:nth-child(n){
-		width: 100%;
-		margin-right: 0;
-	}
-
-	.pad1, .pad2{
-		padding: $padding/2;
-	}
-
-	.pad2{
-		margin-top: $espace ;
-	}
-}
-
-@include width-below(300px){
-	.wrapper-content .wrapper-mini .content-mini{
-		width: 100%;
-		height: auto;
-		margin-right: 0;
-	}
-
-	.wrapper-mini .padAvant{
-		margin-bottom: $espace;
-	}
-
-	.pad2{
-		margin-top: 0;
-	}
-
-	.single-color{
-		width: 100%;
-
-	}
-}
-
-
-
-
-
-
-
-
-
-
-
