--- a/sass/_general-layout.scss
+++ b/sass/_general-layout.scss
@@ -68,7 +68,6 @@ header{
 		right: 0;
 		bottom: 0;
 		left:0;
-		animation: background linear 15s;
 		filter: grayscale(100%);
 		opacity: .2;
 		z-index: -1;
@@ -409,5 +408,144 @@ header{
 	}
 }
 
+// Titres
 
+.section-title{
+	margin-bottom: 30px;
+	text-align: center;
+	
+	h2{
+		font-size: 5rem;
+		font-weight: 900;
+		margin-bottom: 5px;
+	}
+	
+	p{
+		font-size: 2rem;
+	}
+}
 
+// Offre home + page offre
+
+.offre-wrapper{
+	
+	text-align: center;
+	background: linear-gradient(to bottom, #fff, $grisfonce);
+	padding: 1.5*$padding $padding 175px;
+	margin-bottom: $padding;
+	
+	.img-args{
+		position: relative;
+		display: inline-block;
+	}
+	
+	.img-args img{
+		max-width: 50%;
+	}
+}
+
+.argu{
+	
+	div{
+		position:absolute;
+		max-width: 25%;
+		z-index: 1000;
+		padding: $padding/2;
+		
+		&:nth-child(1){
+			text-align: right;
+			top: 10%;
+			left: 4%;
+			
+			h3::after{
+				right: 0;
+			}
+			
+		}
+		
+		&:nth-child(2){
+			text-align: left;
+			right: calc(-.5% + #{$padding}/2);
+			top: calc(52.9% - #{$padding}/2);
+		}
+		
+		&:nth-child(3){
+			text-align: right;
+			right: calc(58% - #{$padding}/2;
+			top: 95.5%;
+				
+			h3::after{
+				right: 0;
+			}
+		}
+
+	}
+	
+	h3{
+		font-weight: 900;
+		font-size: 1.85rem;
+		color: $rouge;
+		margin-bottom: .8em;
+		position: relative;
+		display: inline-block;
+		
+		
+		&::after{
+			content:'';
+			display: block;
+			height: 2px;
+			width: 50%;
+			position: absolute;
+			background-color: $rouge;
+			bottom: -7px;
+		}
+	}
+	
+	p{
+		font-weight: 500;
+		line-height: 1.3em;
+	}
+	
+	a{
+		@extend %bt;
+		margin-top: 1em;
+		color: #fff;
+		background-color: $rouge;
+		border-color: transparent;
+		border-radius: 50px;
+	}
+	
+}
+
+.nav_secondary{
+	border-bottom: 1px solid #e6e6e6;
+	text-align: center;
+	margin-bottom: 50px;
+
+	li{
+		display: inline-block;
+		padding: 0 10px;
+	}
+
+	a{
+		transition: all ease .2s;
+		display: block;
+		padding: 10px 5px;
+		text-decoration: none;
+		color: inherit;
+		font-weight: 900;
+		font-size: 1.5rem;
+		cursor: pointer;
+		border-bottom: 6px solid transparent;
+
+		&:hover{
+			color: $rouge;
+		}
+	}
+
+	.current-menu-item a,
+	.current-menu a{
+		border-bottom: 6px solid $rouge;
+		color: $rouge;
+	}
+}
