--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -3,6 +3,7 @@
 .wrapper-pads{
 	display: flex;
 	flex-wrap:wrap;
+	justify-content: center;
 }
 
 .pad-argument{
@@ -122,12 +123,14 @@
 	}
 
 	h2{
-		@extend %h2;
 		color: #fff;
+		font-size: 2.5rem;
+		font-weight: 900;
+		margin-bottom: .2em;
 	}
 
 	p{
-		font-weight: 500;
+		font-weight: 800;
 		color: #fff;
 	}
 }
