--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -95,14 +95,15 @@
 		}
 
 		span{
-			@extend %h2;
+			font-weight: 900;
+			font-size: 2.5rem;
 			display: inline-block;
 			vertical-align: middle;
 			margin-bottom: 0;
 		}
 
 		&:hover{
-			background-color: $rouge;
+			background-color: adjust-hue($rouge, -18deg);
 		}
 
 
