--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -11,9 +11,10 @@
 
 .form{
 	label{
-		@extend %h2;
+		font-weight: 900;
+		font-size: 2rem;
 		display: block;
-		margin-bottom: 10px;
+		margin-bottom: 5px;
 	}
 
 	input[type="email"],
@@ -64,9 +65,8 @@
 		background: none;
 		border: 2px solid $rouge;
 		color: $rouge;
-		font-size: 3rem;
+		font-size: 2.5rem;
 		padding: 15px 25px 10px;
-		text-transform: uppercase;
 		font-family: Lato, Hevetica, Arial, sans-serif;
 		font-weight: bold;
 		margin-top: 20px;
